fix overflow styles & remove parent list

--- a/js/src/app-registry/ScriptRegistry.less
+++ b/js/src/app-registry/ScriptRegistry.less
@@ -1,5 +1,7 @@
 @import (reference) "../flex";
 @import (reference) "../const";
+@import (reference) "../common/script/Script";
+
 @import (reference) '~@atlaskit/util-shared-styles/src/borders';
 
 
@@ -22,6 +24,12 @@
 
     padding: 0 3px 0 0;
     margin: 0 8px 0 3px;
+
+    .scriptTitle();
+
+    h3 {
+        display: block;
+    }
 }
 
 .scriptDirectoryChildren {
